fixes FavoriteButton mobile styles

--- a/frontend/src/components/FavoriteButton.module.scss
+++ b/frontend/src/components/FavoriteButton.module.scss
@@ -3,9 +3,9 @@
 .button {
   position: relative;
   top: -0.25rem;
-  width: 2.5rem;
-  height: 2.5rem;
-  font-size: 1.25rem;
+  width: 40px;
+  height: 40px;
+  font-size: 0.5rem;
   border-radius: 50%;
   color: $gray-600;
   border: 2px solid $gray-600;
